# clever-faq

./: .env.dev  .env.dist  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: backend-ci.yml
deploy/prod/clever_faq/: Dockerfile  api_entrypoint.sh  scheduler_entrypoint.sh  worker_entrypoint.sh
docs/: contributing.md  licence.md
docs/architecture/: clean-architecture.md  dependency-injection.md  overview.md
src/clever_faq/: scheduler.py  web.py  worker.py
src/clever_faq/application/commands/document/: create_document.py  retrieval_augmentation_for_document.py
src/clever_faq/application/commands/questions/: answer_the_question.py
src/clever_faq/application/commands/user/: activate_user.py  change_username.py  create_user.py  create_vk_user.py  delete_user_by_id.py  grant_admin_by_id.py  revoke_admin_by_id.py
src/clever_faq/application/common/ports/: cache_store.py  event_bus.py  identity_provider.py
src/clever_faq/application/common/ports/dialog/: dialog_command_gateway.py
src/clever_faq/application/common/ports/document/: document_command_gateway.py  document_query_gateway.py  document_storage.py  file_processor.py  file_processor_factory.py
src/clever_faq/application/common/ports/question/: question_answering_port.py
src/clever_faq/application/common/ports/scheduler/: task_id.py  task_scheduler.py
src/clever_faq/application/common/ports/scheduler/payloads/: base.py  documents.py
src/clever_faq/application/common/ports/user/: user_command_gateway.py  user_query_gateway.py
src/clever_faq/application/common/query_params/: pagination.py  user_filters.py
src/clever_faq/application/common/services/: current_user_service.py
src/clever_faq/application/common/views/: document.py  questions.py
src/clever_faq/application/errors/: base.py  document.py  query_params.py  user.py
src/clever_faq/domain/common/entities/: base_aggregate.py  base_entity.py
src/clever_faq/domain/common/errors/: time_errors.py
src/clever_faq/domain/common/services/: base.py
src/clever_faq/domain/common/values/: base.py
src/clever_faq/domain/dialog/: errors.py
src/clever_faq/domain/dialog/entities/: dialog.py
src/clever_faq/domain/dialog/ports/: dialog_id_generator.py
src/clever_faq/domain/dialog/services/: dialog_service.py
src/clever_faq/domain/dialog/values/: dialog_id.py  message.py  tokens.py
src/clever_faq/domain/document/: errors.py  events.py
src/clever_faq/domain/document/entities/: chunk.py  document.py
src/clever_faq/domain/document/ports/: chunk_id_generator.py  document_id_generator.py  text_splitter.py
src/clever_faq/domain/document/services/: document.py
src/clever_faq/domain/document/values/: chunk_id.py  document_id.py  document_name.py  document_text.py  document_type.py
src/clever_faq/domain/user/: errors.py  events.py
src/clever_faq/domain/user/entities/: user.py  vk_user.py
src/clever_faq/domain/user/ports/: user_id_generator.py
src/clever_faq/domain/user/services/: access_service.py  user_service.py  vk_user_service.py
src/clever_faq/domain/user/services/authorization/: base.py  composite.py  constants.py  permission.py  role_hierarchy.py
src/clever_faq/domain/user/values/: user_name.py  user_role.py  vk_first_name.py  vk_id.py  vk_last_name.py
src/clever_faq/infrastructure/adapters/common/: langchain_text_splitter.py  uuid4_chunk_id_generator.py  uuid4_dialog_id_generator.py  uuid4_document_id_generator.py
src/clever_faq/infrastructure/adapters/file/: docx.py  odt.py  pdf.py  powerpoint.py  provider.py  text.py
src/clever_faq/infrastructure/adapters/question/: langchain_question_answering_port.py  provider.py
src/clever_faq/infrastructure/cache/: provider.py  redis_cache_store.py
src/clever_faq/infrastructure/cache/adapters/: cached_question_answering_port.py
src/clever_faq/infrastructure/errors/: base.py  cache.py  file.py  persistence.py
src/clever_faq/infrastructure/persistence/: provider.py
src/clever_faq/infrastructure/persistence/adapters/: aiobotocore_document_storage.py  alchemy_dialog_command_gateway.py  alchemy_transaction_manager.py  constants.py  langchain_document_command_gateway.py
src/clever_faq/infrastructure/persistence/migrations/: env.py
src/clever_faq/infrastructure/persistence/migrations/versions/: 426836fce6c3_.py
src/clever_faq/infrastructure/persistence/models/: dialog.py
src/clever_faq/infrastructure/scheduler/: task_iq_task_scheduler.py
src/clever_faq/infrastructure/scheduler/tasks/: document_tasks.py  schemas.py
src/clever_faq/presentation/errors/: base.py  document.py
src/clever_faq/presentation/http/v1/common/: exception_handler.py
src/clever_faq/presentation/http/v1/common/routes/: healthcheck.py  index.py
src/clever_faq/presentation/http/v1/routes/documents/: __init__.py
src/clever_faq/presentation/http/v1/routes/documents/create_documents/: handlers.py  schemas.py
src/clever_faq/presentation/http/v1/routes/questions/: __init__.py
src/clever_faq/presentation/http/v1/routes/questions/ask_question/: handlers.py  schemas.py
src/clever_faq/presentation/vk/handlers/: answer.py
src/clever_faq/presentation/vk/middlewares/: inject_middleware.py
src/clever_faq/setup/: bootstrap.py  ioc.py
src/clever_faq/setup/config/: asgi.py  cache.py  chroma.py  database.py  openai.py  rabbit.py  s3.py  settings.py  worker.py
tests/integration/: conftest.py  ioc.py
tests/integration/http/v1/common/: test_get_index.py  test_healthcheck.py
tests/integration/http/v1/routes/: test_create_document.py
tests/unit/: test_lifespans.py
tests/unit/application/: conftest.py
tests/unit/application/commands/document/: test_create_document.py
tests/unit/domain/common/: test_base.py
tests/unit/factories/: named_entity.py  settings_data.py  tagged_entity.py  value_objects.py
tests/unit/setup/: test_cfg_asgi.py  test_cfg_cache.py  test_cfg_database.py  test_cfg_s3.py
